--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "onnxruntime-node": "^1.17.0",
     "uuid": "^9.0.1"
